--- a/_publications/2024-12-01-paper-1.md
+++ b/_publications/2024-12-01-paper-1.md
@@ -1,7 +1,7 @@
 ---
 title: "How the Economic Policy Uncertainty (EPU) impacts FinTech: The implication of P2P lending markets"
 collection: publications
-permalink: /publication/2024-12-01-paper-1
+permalink: #/publication/2024-12-01-paper-1
 excerpt: 'This study investigates the impact of state-level Economic Policy Uncertainty (EPU) on FinTech lending marketplace. Leveraging two large-scale Peer-to-Peer (P2P) datasets of LendingClub and Prosper from 2010 to 2019 alongside the news-based EPU index, we unveil a causal relationship between the EPU and both the interest rates and loan amounts. Economically, a one-standard-deviation increase in EPU causes 4.49 and 8.90 basis points change in P2P loan rates, and 1.56% and 1.28% variation in loan amounts, for LendingClub and Prosper, respectively. Furthermore, the national-sourced EPU has a relatively stronger effect on LendingClub, while the state-sourced EPU imposes more impacts on Prosper.'
 date: 2024-12-01
 venue: 'Finance Research Letters'
