--- a/_publications/2025-12-01-paper-3.md
+++ b/_publications/2025-12-01-paper-3.md
@@ -2,7 +2,7 @@
 title: "Food on Road: A Novel County-Level Analysis of Road Density and its Impact on Food
 Prices in the U.S. Market, with Jasmine (Aichih) Chang, Jim Shi"
 collection: publications
-permalink: /publication/2024-12-01-paper-3
+permalink: #/publication/2024-12-01-paper-3
 excerpt: 'Abstract: Food crisis has been prevailing for decades. Recently, the world-wide economic inflation, especially in food price, has exacerbated the food crisis dramatically. This study examines how transportation infrastructure, e.g., road density, influences food price through the lens of food access and mobility. Using 2010 and 2020 U.S. county-level datasets in conjunction with other data sources, empirically we reveal that, in the U.S. market, higher road density significantly reduces cost per meal by enhancing local and regional food mobility. In particular, ceteris paribus, one mile per square mile increase in road density reduces the cost per meal by 1.3%. We further reveal that road density helps narrow price disparities tied to store availability, while such price dampening effect diminishes or vanishes in or near densely populated areas. These findings shed light on how infrastructure influences food mobility and price equity, and offer evidence-based implications for urban planners, transportation policymakers, and local governments. This study makes several salient contributions to the extant literature. First, it documents empirical evidence from the U.S. market on how infrastructure affects food prices, along with other geographic, demographic, and temporal factors. Second, the study offers a nuanced and deep understanding of how transportation networks interact with local food market, spatially and temporally. Last but not least, this study enriches the food-transportation literature with novel empirical evidence by curating a county-level road density dataset.'
 date: 2025-12-01
 venue: #'Journal 1'
