--- a/_publications/2024-12-01-paper-2.md
+++ b/_publications/2024-12-01-paper-2.md
@@ -5,7 +5,7 @@ collection: publications
 permalink: #/publication/2024-12-01-paper-2
 excerpt: 'Abstract: The food transportation and distribution industry has been radically disrupted over the last few years, especially amid the COVID-19 pandemic. Food prices, for example, have been seen to increase considerably in the wave of economic inflation. As two main driving factors in the context of food transportation, (1) the rising diesel prices and (2) the prevailing shortage of truck drivers have posed threatening challenges, leading to a substantial surge in transportation costs and subsequently contributing to higher food market prices. Based on collected data consolidated from multiple sources, this study conducts a comprehensive analysis to elucidate the impact of diesel prices and driver availability on food prices. To this end, we have curated a panel dataset encompassing key variables such as diesel prices, truck driver availability, and food prices for the most popular food commodities (i.e., apples, potatoes, onions, and tomatoes) pre-, amid, and post-pandemic of COVID-19. Employing fixed effects regression, this paper specifically investigates the extent to which the surge in fuel prices and truck-driver availability has contributed to the overall increase in food prices in the United States fresh food market. With high statistical significance, the experiment results show that the rising diesel prices and the shortage of truck drivers’ availability have a significant positive impact on food price margin, ceteris paribus. The contributions of this study are multifold. First, our study enriches the food price literature by specifically considering the two fundamental root factors: truck-driver availability and diesel price. Second, this study provides data-driven empirical analysis to unveil how diesel prices, driver availability, and the significant impact of the pandemic drive food prices. Third, considering the impact of COVID-19, the food price sensitivity to diesel prices and driver availability obtained from this study renders practical guidelines for policy implications, especially in the age of a devastating pandemic.'
 date: 2024-12-01
-venue: 'Transportation Research Part E: Logistics
+venue: 'Published in Transportation Research Part E: Logistics
 and Transportation Review'
 paperurl: 'https://doi.org/10.1016/j.tre.2024.103794'
 citation: #'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
